testsuite/bsc.names/portRenaming/invalidAttrs/enable/Space.bsv

interface Ifc;
  (* enable = " name" *)
  method Action start(Bool a, Bool b);
endinterface

